# D_HNN

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: molecular_experiments.ipynb  sh_autoencoder_dhnn.ipynb
src/dhnn/: __init__.py  animation.py  data.py  integrators.py  models.py  plotting.py  training.py
src/dhnn/molecular/: __init__.py  copresheaf.py  datasets.py  equivariant_ae.py  normal_modes.py  schnet_hamiltonian.py  soap_expansion.py  training_mol.py
