[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dhnn"
version = "0.1.0"
description = "Dissipative Hamiltonian Neural Networks — PyTorch implementation"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "ipykernel",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]
